--- a/css/teach4dh.css
+++ b/css/teach4dh.css
@@ -24,7 +24,7 @@ table, th, td, img {
 /*------------------------------ HEADER ------------------------------*/
 
 #header {
-    background: linear-gradient(rgba(255,119,0,0.6), rgba(255,119,0,0.2));
+    background: linear-gradient(rgba(234, 54, 18, 0.6), rgba(234, 54, 18, 0.2));
     border-bottom: 2px solid #fff;
     color: #fff;
     padding-left: 20px;
@@ -105,8 +105,8 @@ table, th, td, img {
 }
 
 h1, h2, h3 {
-    color: rgb(88,169,63);
-    color: rgb(68,129,48);
+    color: rgb(162, 41, 0);
+    color: rgb(162, 41, 0, );
     font-family: "Slabo 27px";
 }
 
@@ -226,12 +226,12 @@ li {
 
 #footer {
     /* color matches color from the logo */
-    background: linear-gradient(rgba(88,169,63,0.8), rgba(88,169,63,0.7));
-    background: linear-gradient(rgba(68,129,48,0.8), rgba(68,129,48,0.7));
+    background: linear-gradient(rgba(234, 54, 18, 0.8), rgba(234, 54, 18,0.7));
+    background: linear-gradient(rgba(234, 54, 18,0.8), rgba( 234, 54, 18,0.7));
     xborder-top: 4px solid #999;
-    border-top: 2px solid rgba(255,119,0,0.8);
+    border-top: 2px solid rgba(234, 54, 18,0.8);
     border-bottom: 4px solid #fff;
-    xborder-bottom: 4px solid rgba(255,119,0,0.8);
+    xborder-bottom: 4px solid rgba(234, 54, 18,0.8);
     padding: 6px 0 0;
 }
 
