--- a/css/teach4dh.css
+++ b/css/teach4dh.css
@@ -1,3 +1,5 @@
+/* adapted from law17.css */
+
 body {
     background-color: #fff;
     margin: 0;
@@ -225,7 +227,7 @@ li {
 /*------------------------------ FOOTER ------------------------------*/
 
 #footer {
-    /* color matches color from the logo */
+    /*law17:  color matches color from the logo */
     background: linear-gradient(rgba(234, 54, 18, 0.8), rgba(234, 54, 18,0.7));
     background: linear-gradient(rgba(234, 54, 18,0.8), rgba(234, 54, 18,0.7));
     xborder-top: 4px solid #999;
@@ -236,7 +238,9 @@ li {
 }
 
 #footer > div {
-    height: 20px;
+    /* height: 20px;
+    padding: 10px 10px 10px 50px; */
+    height: 5px;
     padding: 10px 10px 10px 50px;
 }
 
