--- a/css/teach4dh.css
+++ b/css/teach4dh.css
@@ -26,7 +26,7 @@ table, th, td, img {
 /*------------------------------ HEADER ------------------------------*/
 
 #header {
-    background: linear-gradient(rgba(234, 54, 18, 0.8), rgba(234, 54, 18, 0.4));
+    background: linear-gradient(rgba(255,215,0, 1), rgba(255,215,0, 1));
     border-bottom: 2px solid #fff;
     color: #fff;
     padding-left: 20px;
@@ -228,12 +228,12 @@ li {
 
 #footer {
     /*law17:  color matches color from the logo */
-    background: linear-gradient(rgba(234, 54, 18, 0.8), rgba(234, 54, 18,0.7));
-    background: linear-gradient(rgba(234, 54, 18,0.8), rgba(234, 54, 18,0.7));
+    background: linear-gradient(rgba(255,215,0, 1), rgba(255,215,0, 1));
+    background: linear-gradient(rgba(255,215,0, 1, rgba(255,215,0, 1));
     xborder-top: 4px solid #999;
-    border-top: 2px solid rgba(234, 54, 18,0.8);
+    border-top: 2px solid rgba(255,215,0, 1;
     border-bottom: 4px solid #fff;
-    xborder-bottom: 4px solid rgba(234, 54, 18,0.8);
+    xborder-bottom: 4px solid rgba(255,215,0, 1);
     padding: 6px 0 0;
 }
 
