--- a/css/teach4dh.css
+++ b/css/teach4dh.css
@@ -7,7 +7,7 @@ body {
 
 body, p {
     xfont-family: Roboto, Helvetica, Arial, sans-serif; /* screws up on non-asci letters */
-    font-family: "Times New Roman", Times, serif;
+    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;    /*"Times New Roman", Times, serif;*/
 }
 
 table, th, td, img {
