--- a/css/teach4dh.css
+++ b/css/teach4dh.css
@@ -26,7 +26,7 @@ table, th, td, img {
 /*------------------------------ HEADER ------------------------------*/
 
 #header {
-    background: linear-gradient(rgba(255, 51, 0, 1), rgba(255,215,0, 1));
+    background: linear-gradient(rgba(222,119,0,1), rgba(255,215,0, 1));
     border-bottom: 2px solid #fff;
     color: #fff;
     padding-left: 20px;
